--- a/client/src/Components/Banner/Banner.css
+++ b/client/src/Components/Banner/Banner.css
@@ -1,12 +1,9 @@
 .banner-container {
-    height: 300px;
-    /* width: 100%; */
-    margin: 10px;
-    /* padding: 10px; */
-    /* width: 100%; */
+    height: 400px;
+    margin: 15px;
+    background-color: #E5D4FF;
+    box-shadow: 2px 2px 2px 2px #D0A2F7;
 }
 .banner-container > img {
-   height: 300px;
-   /* width: 80px; */
-   object-fit: contain;
+   height: 400px;
 }
