--- a/client/src/Components/Brands/Brands.css
+++ b/client/src/Components/Brands/Brands.css
@@ -1,10 +1,9 @@
-.marquee-image   
- {
-    margin:20px 50px 20px 50px;
-    /* background-color: white; */
+.marquee-image {
+    margin: 20px 50px 20px 50px;
 }
+
 .brands-container {
-    background-color:#fff;
+    background-color: #fff;
     height: 170px;
     box-shadow: 2px 2px 2px 2px #D0A2F7;
     margin: 15px;
