--- a/client/src/Pages/Registerpage/Registerpage.css
+++ b/client/src/Pages/Registerpage/Registerpage.css
@@ -1,31 +1,34 @@
-.container{
+.container {
     height: 80vh;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 18px;
-    
 }
+
 .form {
     display: flex;
     flex-direction: column;
     padding: 45px;
+    width: 250px;
     border-radius: 20px;
     box-shadow: 2px 2px 2px 2px;
     background-color: rgb(193, 190, 190);
 }
+
 .button {
-height: 50px;
-width: 50%;
-color: white;
-background-color: rgb(67, 54, 4);
-margin: 20%;
-box-shadow: 2px 2px 2px 2px;
-border-radius: 20px;
-font-size: 15px;
+    height: 50px;
+    width: 50%;
+    color: #481a70;
+    background-color: rgb(67, 54, 4);
+    margin: 20%;
+    box-shadow: 2px 2px 2px 2px;
+    border-radius: 20px;
+    font-size: 15px;
 }
+
 input {
     padding: 10px;
     margin: 10px;
-    width:80%;
+    width: 80%;
 }
